--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev" : "nodemon server.js ",
-    "start" : "node server.js"
+    "dev": "nodemon server.js ",
+    "start": "node server.js"
+  },
+  "engine" : {
+    "node": "6.4.0"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "mongoose": "^4.5.10"
   }
 }
