--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon index.js",
     "start": "node index.js"
   },
-  "engine": {
+  "engines": {
     "node": "6.4.0"
   },
   "keywords": [],
